Fixed layout on mobile devices

--- a/src/app/indexcontent/indexcontent.component.sass
+++ b/src/app/indexcontent/indexcontent.component.sass
@@ -1,7 +1,6 @@
 .rect 
 	width: 100%
 	height: 300px
-	margin-top: 10px
 	background-color: #cccccc
 	border-radius: 5px
 	display: flex
@@ -27,8 +26,8 @@
 .title 
 	font-family: manrope-light
 	font-size: 50px
-	margin-left: 25px
-	margin-bottom: 25px
+	margin-left: 15px
+	margin-bottom: 10px
 	display: inline
 
 .arrow 
@@ -38,10 +37,11 @@
 
 @media screen and (max-device-width: 800px) /*-- phone --*/
 	.rect
-		margin-top: 10px
+		height: 100px
+		margin-bottom: 1.5vh
 	
-	.column 
-		margin-bottom: 20px
+	.title
+		font-size: 30px
 	
 	.modal-content 
 		width: 100%
