--- a/src/app/photocontent/photocontent.component.sass
+++ b/src/app/photocontent/photocontent.component.sass
@@ -26,8 +26,8 @@ img
 
 /* Modal Content (Image) */
 #modalimg 
-	max-width: 85%
-	max-height: 85%
+	max-width: 90%
+	max-height: 90%
 	width: auto
 	height: auto
 	animation-name: zoom
@@ -64,5 +64,5 @@ img
 	img
 		width: 100%
 		height: auto
-		margin-bottom: 1vh
+		margin-bottom: 1.5vh
 		border-radius: 5px
