--- a/src/app/projectcontent/projectcontent.component.sass
+++ b/src/app/projectcontent/projectcontent.component.sass
@@ -17,7 +17,6 @@ img
 	font-family: manrope-medium
 	font-size: 25px
 	align-self: flex-start
-	margin-top: 50px
 	margin-bottom: 10px
 
 .describetext 
